// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle Component > Snapshot Tests > should match snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative p-1"
    >
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgb(0, 0, 0);"
      >
        <div
          class="absolute inset-0 rounded-full bg-[#FFFFFF]"
          style="box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);"
        />
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Option A
        </span>
      </div>
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgba(0, 0, 0, 0.376);"
      >
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Option B
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toggle Component > Snapshot Tests > should match snapshot with different items 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative p-1"
    >
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgb(0, 0, 0);"
      >
        <div
          class="absolute inset-0 rounded-full bg-[#FFFFFF]"
          style="box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);"
        />
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Public
        </span>
      </div>
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgba(0, 0, 0, 0.376);"
      >
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Private
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toggle Component > Snapshot Tests > should match snapshot with label 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div>
      Choose option
    </div>
    <div
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative p-1"
    >
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgb(0, 0, 0);"
      >
        <div
          class="absolute inset-0 rounded-full bg-[#FFFFFF]"
          style="box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);"
        />
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Option A
        </span>
      </div>
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgba(0, 0, 0, 0.376);"
      >
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Option B
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toggle Component > Snapshot Tests > should match snapshot with second item selected 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative p-1"
    >
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgba(0, 0, 0, 0.376);"
      >
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Option A
        </span>
      </div>
      <div
        class="relative rounded-full py-1.5 px-4 cursor-pointer transition-colors duration-200 font-primary font-normal text-sm"
        style="color: rgb(0, 0, 0);"
      >
        <div
          class="absolute inset-0 rounded-full bg-[#FFFFFF]"
          style="box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);"
        />
        <span
          class="relative z-10 whitespace-nowrap"
        >
          Option B
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
